--- a/portfolio2/src/main/webapp/WEB-INF/web.xml
+++ b/portfolio2/src/main/webapp/WEB-INF/web.xml
@@ -2,18 +2,21 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- 웹 애플리케이션이 시작 될 때 수행할 내용을 가지는 파일에 경로 설정- 이 파일에 모든 곳에서 사용할 bean을 생성 
+	웹 애플리케이션의 시작과 종료, 세션의 생성과 종료에 관련된 리스너가 있음 -->
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
 	
-	<!-- Creates the Spring Container shared by all Servlets and Filters -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-
-	<!-- Processes application requests -->
+	
+	<!-- URL 패턴에 따라 동작하는 서블릿을 생성하고 스프링 설정 파일의 경로를 설정: FrontController -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -21,6 +24,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
+		<!-- 웹 애플리케이션이 실행되자 마자 생 -->
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
@@ -28,5 +32,18 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
-</web-app>
+	<!-- 이 작업 안하면 입력할 때 한글을 입력하면 한글이 깨집니다. -->
+	<!-- 파라미터 인코딩 필터 설정  -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+		<param-name>encoding</param-name>
+		<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		</filter-mapping>
+	</web-app>
